Исправление хранения данных пользователя

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@ build/
 
 /registration-64a55-firebase-adminsdk-fbsvc-8015080d81.json
 
+doc_2025-06-25_20-32-30.env
+registration-64a55-firebase-adminsdk-fbsvc-e0be139804.json
+doc_2025-06-25_20-32-30.env
+registration-64a55-firebase-adminsdk-fbsvc-e0be139804.json
+doc_2025-06-25_20-32-30.env
+registration-64a55-firebase-adminsdk-fbsvc-e0be139804.json
+doc_2025-06-25_20-32-30.env
+doc_2025-06-25_20-32-30.env
