--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cryptography==45.0.4
 et_xmlfile==2.0.0
 firebase-admin==6.9.0
 Flask==3.1.1
+flask-cors==6.0.1
 Flask-Login==0.6.3
 google-api-core==2.25.1
 google-api-python-client==2.173.0
